--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,10 @@ jobs:
       with:
         distribution: temurin
         java-version: 17
-    
+
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v3 
+
     - name: build
       run: ./gradlew build
 
